# studying

./: index.html  main.c  useful_commands.md
C#/Solar/: Program.cs  Solar.sln
C#/Solar/Controllers/: MyController.cs
C#/Solar/Properties/: launchSettings.json
C_Cpp/: a.out  cmd.c  lixo.out  matrix.cpp  matrix.out
C_Cpp/argumentos_cl/: argumentos_linha_de_comando.out  main.py
addon/behavior_pack/: brick_sword.json  manifest.json
addon/scripts/: main.js
graphic_project/: hello.out
graphic_project/opengl-glfw/: CMakeLists.txt  README.md  main.cpp
graphic_project/opengl-glfw/glad/include/glad/: glad.h
graphic_project/opengl-glfw/glad/src/: glad.c
manim/manimations/: README.md  main.py
manim/manimations/media/videos/1080p60/partial_movie_files/CheckHealthDemo/: partial_movie_file_list.txt
manim/manimations/media/videos/main/480p15/partial_movie_files/Sin_and_Cos/: partial_movie_file_list.txt
music/: links.json
python/: bs_log_creator.py  fake_log.txt
solar_api/: README.md  TODO.md  activate.sh  db.sqlite3  dev.sh  notes.md  pyproject.toml
solar_api/src/api/: application.py
solar_api/src/datalayer/: dbconfig.py
solar_api/src/datalayer/models/: user.py
